[tool.poetry]
name = "sharpen"
version = "0.1.0"
description = ""
authors = ["Soof Golan <soofgolan@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11,<3.13"
jupyterlab = "^4.0.8"
tqdm = "^4.66.1"
numpy = "^1.26.2"
opencv-python = "^4.8.1.78"
torch = "^2.1.1"
torchvision = "^0.16.1"
kornia = "^0.7.0"
pillow = "^10.1.0"
scipy = "^1.11.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
